--- a/resources/views/layouts/layout.antlers.html
+++ b/resources/views/layouts/layout.antlers.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ site_name }}</title>
+  <title>{{ title }} | Oh See Media</title>
   <link href="{{ mix src='/css/app.css' }}" rel="stylesheet">
  </head>
  <body class="text-lg text-dark bg-light border-t-4 border-secondary">
-   <div class="w-full max-w-3xl mx-auto px-2">
-    {{ partial:partials/header }}
-    {{ template_content }}
-   </div>
-  </div>
+    <div class="w-full max-w-3xl mx-auto px-2">
+      {{ partial:partials/header }}
+      {{ template_content }}
+      {{ partial:partials/footer }}
+    </div>
   <script src="{{ mix src='/js/app.js' }}"></script>
  </body>
 </html>
