--- a/resources/views/templates/home.antlers.html
+++ b/resources/views/templates/home.antlers.html
@@ -4,11 +4,7 @@
     {{ /if }}
 
     {{ posts }}
-        <article class="mb-4 py-4 border-b border-gray-300">
-            <h3><a href="{{ url }}">{{ title }}</a></h3>
-            <p class="text-sm text-gray-700">{{ date }}</p>
-            <div>{{ content | safe_truncate:300 }}</div>
-        </article>
+      {{ partial:partials/summary }}
     {{ /posts }}
 
     {{ paginate }}
