Transfering more posts over from previous blog.

--- a/resources/views/layouts/layout.antlers.html
+++ b/resources/views/layouts/layout.antlers.html
@@ -7,7 +7,7 @@
   <title>{{ title }} | Oh See Media</title>
   <link href="{{ mix src='/css/app.css' }}" rel="stylesheet">
  </head>
- <body class="text-lg text-dark bg-light border-t-4 border-secondary">
+ <body class="text-dark bg-light border-t-4 border-secondary">
     <div class="w-full max-w-3xl mx-auto px-2">
       {{ partial:partials/header }}
       {{ template_content }}
