--- a/public/css/app.css
+++ b/public/css/app.css
@@ -884,313 +884,220 @@ video {
 }
 
 /*
- * Copyright (c) 2017-present Arctic Ice Studio <development@arcticicestudio.com>
- * Copyright (c) 2017-present Sven Greb <development@svengreb.de>
- *
- * Project:    Nord highlight.js
- * Version:    0.1.0
- * Repository: https://github.com/arcticicestudio/nord-highlightjs
- * License:    MIT
- * References:
- *   https://github.com/arcticicestudio/nord
- */
+
+Night Owl for highlight.js (c) Carl Baxter <carl@cbax.tech>
+
+An adaptation of Sarah Drasner's Night Owl VS Code Theme 
+https://github.com/sdras/night-owl-vscode-theme 
+
+Copyright (c) 2018 Sarah Drasner
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+*/
 
 .hljs {
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #2E3440;
+  background: #011627;
+  color: #d6deeb;
 }
 
-.hljs,
-.hljs-subst {
-  color: #D8DEE9;
+/* General Purpose */
+
+.hljs-keyword {
+  color: #c792ea;
+  font-style: italic;
 }
 
-.hljs-selector-tag {
-  color: #81A1C1;
+.hljs-built_in {
+  color: #addb67;
+  font-style: italic;
 }
 
-.hljs-selector-id {
-  color: #8FBCBB;
-  font-weight: bold;
-}
-
-.hljs-selector-class {
-  color: #8FBCBB;
-}
-
-.hljs-selector-attr {
-  color: #8FBCBB;
-}
-
-.hljs-selector-pseudo {
-  color: #88C0D0;
-}
-
-.hljs-addition {
-  background-color: rgba(163, 190, 140, 0.5);
-}
-
-.hljs-deletion {
-  background-color: rgba(191, 97, 106, 0.5);
-}
-
-.hljs-built_in,
 .hljs-type {
-  color: #8FBCBB;
+  color: #82aaff;
 }
 
-.hljs-class {
-  color: #8FBCBB;
-}
-
-.hljs-function {
-  color: #88C0D0;
-}
-
-.hljs-function > .hljs-title {
-  color: #88C0D0;
-}
-
-.hljs-keyword,
-.hljs-literal,
-.hljs-symbol {
-  color: #81A1C1;
+.hljs-literal {
+  color: #ff5874;
 }
 
 .hljs-number {
-  color: #B48EAD;
+  color: #F78C6C;
 }
 
 .hljs-regexp {
-  color: #EBCB8B;
+  color: #5ca7e4;
 }
 
 .hljs-string {
-  color: #A3BE8C;
+  color: #ecc48d;
+}
+
+.hljs-subst {
+  color: #d3423e;
+}
+
+.hljs-symbol {
+  color: #82aaff;
+}
+
+.hljs-class {
+  color: #ffcb8b;
+}
+
+.hljs-function {
+  color: #82AAFF;
 }
 
 .hljs-title {
-  color: #8FBCBB;
+  color: #DCDCAA;
+  font-style: italic;
 }
 
 .hljs-params {
-  color: #D8DEE9;
+  color: #7fdbca;
 }
 
-.hljs-bullet {
-  color: #81A1C1;
-}
-
-.hljs-code {
-  color: #8FBCBB;
-}
-
-.hljs-emphasis {
-  font-style: italic;
-}
-
-.hljs-formula {
-  color: #8FBCBB;
-}
-
-.hljs-strong {
-  font-weight: bold;
-}
-
-.hljs-link:hover {
-  text-decoration: underline;
-}
-
-.hljs-quote {
-  color: #4C566A;
-}
+/* Meta */
 
 .hljs-comment {
-  color: #4C566A;
+  color: #637777;
+  font-style: italic;
 }
 
 .hljs-doctag {
-  color: #8FBCBB;
+  color: #7fdbca;
 }
 
-.hljs-meta,
+.hljs-meta {
+  color: #82aaff;
+}
+
 .hljs-meta-keyword {
-  color: #5E81AC;
+  color: #82aaff;
 }
 
 .hljs-meta-string {
-  color: #A3BE8C;
+  color: #ecc48d;
+}
+
+/* Tags, attributes, config */
+
+.hljs-section {
+  color: #82b1ff;
+}
+
+.hljs-tag,
+.hljs-name,
+.hljs-builtin-name {
+  color: #7fdbca;
 }
 
 .hljs-attr {
-  color: #8FBCBB;
+  color: #7fdbca;
 }
 
 .hljs-attribute {
-  color: #D8DEE9;
-}
-
-.hljs-builtin-name {
-  color: #81A1C1;
-}
-
-.hljs-name {
-  color: #81A1C1;
-}
-
-.hljs-section {
-  color: #88C0D0;
-}
-
-.hljs-tag {
-  color: #81A1C1;
+  color: #80cbc4;
 }
 
 .hljs-variable {
-  color: #D8DEE9;
+  color: #addb67;
 }
 
-.hljs-template-variable {
-  color: #D8DEE9;
+/* Markup */
+
+.hljs-bullet {
+  color: #d9f5dd;
 }
 
-.hljs-template-tag {
-  color: #5E81AC;
+.hljs-code {
+  color: #80CBC4;
 }
 
-.abnf .hljs-attribute {
-  color: #88C0D0;
-}
-
-.abnf .hljs-symbol {
-  color: #EBCB8B;
-}
-
-.apache .hljs-attribute {
-  color: #88C0D0;
-}
-
-.apache .hljs-section {
-  color: #81A1C1;
-}
-
-.arduino .hljs-built_in {
-  color: #88C0D0;
-}
-
-.aspectj .hljs-meta {
-  color: #D08770;
-}
-
-.aspectj > .hljs-title {
-  color: #88C0D0;
-}
-
-.bnf .hljs-attribute {
-  color: #8FBCBB;
-}
-
-.clojure .hljs-name {
-  color: #88C0D0;
-}
-
-.clojure .hljs-symbol {
-  color: #EBCB8B;
-}
-
-.coq .hljs-built_in {
-  color: #88C0D0;
-}
-
-.cpp .hljs-meta-string {
-  color: #8FBCBB;
-}
-
-.css .hljs-built_in {
-  color: #88C0D0;
-}
-
-.css .hljs-keyword {
-  color: #D08770;
-}
-
-.diff .hljs-meta {
-  color: #8FBCBB;
-}
-
-.ebnf .hljs-attribute {
-  color: #8FBCBB;
-}
-
-.glsl .hljs-built_in {
-  color: #88C0D0;
-}
-
-.groovy .hljs-meta:not(:first-child) {
-  color: #D08770;
-}
-
-.haxe .hljs-meta {
-  color: #D08770;
-}
-
-.java .hljs-meta {
-  color: #D08770;
-}
-
-.ldif .hljs-attribute {
-  color: #8FBCBB;
-}
-
-.lisp .hljs-name {
-  color: #88C0D0;
-}
-
-.lua .hljs-built_in {
-  color: #88C0D0;
-}
-
-.moonscript .hljs-built_in {
-  color: #88C0D0;
-}
-
-.nginx .hljs-attribute {
-  color: #88C0D0;
-}
-
-.nginx .hljs-section {
-  color: #5E81AC;
-}
-
-.pf .hljs-built_in {
-  color: #88C0D0;
-}
-
-.processing .hljs-built_in {
-  color: #88C0D0;
-}
-
-.scss .hljs-keyword {
-  color: #81A1C1;
-}
-
-.stylus .hljs-keyword {
-  color: #81A1C1;
-}
-
-.swift .hljs-meta {
-  color: #D08770;
-}
-
-.vim .hljs-built_in {
-  color: #88C0D0;
+.hljs-emphasis {
+  color: #c792ea;
   font-style: italic;
 }
 
-.yaml .hljs-meta {
-  color: #D08770;
+.hljs-strong {
+  color: #addb67;
+  font-weight: bold;
+}
+
+.hljs-formula {
+  color: #c792ea;
+}
+
+.hljs-link {
+  color: #ff869a;
+}
+
+.hljs-quote {
+  color: #697098;
+  font-style: italic;
+}
+
+/* CSS */
+
+.hljs-selector-tag {
+  color: #ff6363;
+}
+
+.hljs-selector-id {
+  color: #fad430;
+}
+
+.hljs-selector-class {
+  color: #addb67;
+  font-style: italic;
+}
+
+.hljs-selector-attr,
+.hljs-selector-pseudo {
+  color: #c792ea;
+  font-style: italic;
+}
+
+/* Templates */
+
+.hljs-template-tag {
+  color: #c792ea;
+}
+
+.hljs-template-variable {
+  color: #addb67;
+}
+
+/* diff */
+
+.hljs-addition {
+  color: #addb67ff;
+  font-style: italic;
+}
+
+.hljs-deletion {
+  color: #EF535090;
+  font-style: italic;
 }
 
 @font-face {
@@ -1314,7 +1221,7 @@ p {
 code {
   font-size: 1rem;
   background-color: #F8FAFC;
-  color: #D45974;
+  color: #CC3A5A;
   font-size: 0.875rem;
   padding: 0.25rem;
 }
@@ -1327,25 +1234,27 @@ ul li {
 h1 {
   font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 1rem;
 }
 
 h2 {
   font-size: 1.25rem;
   font-weight: 700;
-  margin-bottom: 0.75rem;
+  margin-top: 3rem;
+  margin-bottom: 1.25rem;
 }
 
 h3 {
   font-size: 1.125rem;
   font-weight: 700;
-  margin-bottom: 0.5rem;
+  margin-top: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 h4 {
   font-size: 1rem;
   font-weight: 700;
-  margin-bottom: 0.25rem;
+  margin-top: 2rem;
+  margin-bottom: 0.75rem;
 }
 
 .sr-only {
