--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 
-@import 'highlight.js/styles/nord.css';
+@import 'highlight.js/styles/night-owl.css';
 @import './typography.css';
 
 @import 'tailwindcss/utilities';
