--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -78,7 +78,7 @@ p {
 }
 
 code {
-  @apply text-base bg-light text-secondary-lighten text-sm p-1;
+  @apply text-base bg-light text-secondary text-sm p-1;
 }
 
 ul li {
@@ -86,14 +86,14 @@ ul li {
 }
 
 h1 {
- @apply text-2xl font-bold mb-4;
+ @apply text-2xl font-bold;
 }
 h2 {
- @apply text-xl font-bold mb-3;
+ @apply text-xl font-bold mt-12 mb-5;
 }
 h3 {
- @apply text-lg font-bold mb-2;
+ @apply text-lg font-bold mt-10 mb-4;
 }
 h4 {
- @apply text-base font-bold mb-1;
+ @apply text-base font-bold mt-8 mb-3;
 }
