--- a/resources/views/layouts/layout.antlers.html
+++ b/resources/views/layouts/layout.antlers.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="{{ site_short_locale }}" class="font-sans text-dark">
- <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ title }} | Oh See Media</title>
-  <link href="{{ mix src='/css/app.css' }}" rel="stylesheet">
- </head>
- <body class="text-dark bg-light border-t-4 border-secondary">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="{{ excerpt ?? "Oh See Media" }}" />
+    
+    <meta property="og:site_name" content="Oh See Media">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{ title ?? "Oh See Media" }}">
+    <meta property="og:description" content="{{ excerpt ?? "Oh See Media" }}">
+    <meta property="og:url" content="{{ current_url }}">
+    {{ asset url="/images/ohseemedia-logo.svg" }}
+      <meta property="og:image" content="{{ url }}">
+    {{ /asset }}
+
+    <title>{{ title }} | Oh See Media</title>
+    <link href="{{ mix src='/css/app.css' }}" rel="stylesheet" />
+  </head>
+  <body class="text-dark bg-light border-t-4 border-secondary">
     <div class="w-full max-w-3xl mx-auto px-2">
       {{ partial:partials/header }}
       {{ template_content }}
       {{ partial:partials/footer }}
     </div>
-  <script src="{{ mix src='/js/app.js' }}"></script>
- </body>
+    <script src="{{ mix src='/js/app.js' }}"></script>
+  </body>
 </html>
