Remove laravel-server-analytics.

--- a/resources/views/partials/_header.antlers.html
+++ b/resources/views/partials/_header.antlers.html
@@ -1,5 +1,7 @@
 <header class="flex flex-col text-center items-center justify-between py-2 mb-8 md:flex-row">
-  <a href="/"><img src="/images/ohseemedia-logo.svg" class="h-16"/></a>
+  {{ asset url="/images/ohseemedia-logo.svg" }}
+    <a href="/"><img src="{{ url }}" class="h-16"/></a>
+  {{ /asset }}
   <form action="/search">
     <input class="form-input" type="search" name="q" placeholder="Search..." value="{{ get:q }}">
   </form>
