--- a/resources/views/partials/_header.antlers.html
+++ b/resources/views/partials/_header.antlers.html
@@ -1,7 +1,5 @@
 <header class="flex flex-col text-center items-center justify-between py-2 mb-8 md:flex-row">
-  {{ asset url="/images/ohseemedia-logo.svg" }}
-    <a href="/"><img src="{{ url }}" class="h-16"/></a>
-  {{ /asset }}
+   <a href="/"><img src="/images/ohseemedia-logo.svg" class="h-16"/></a>
   <form action="/search">
     <input class="form-input" type="search" name="q" placeholder="Search..." value="{{ get:q }}">
   </form>
