Remove public dirs from git.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,9 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 
+/* purgecss start ignore */
 @import 'highlight.js/styles/night-owl.css';
 @import './typography.css';
+/* purgecss end ignore */
 
 @import 'tailwindcss/utilities';
