--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -1,3 +1,4 @@
+/*! purgecss start ignore */
 @font-face {
   font-family: "Inter";
   font-style: normal;
@@ -105,3 +106,4 @@ h3 {
 h4 {
   @apply text-base font-bold mt-8 mb-3;
 }
+/*! purgecss end ignore */
