Add description to RSS feed template.

--- a/resources/views/templates/feed.antlers.html
+++ b/resources/views/templates/feed.antlers.html
@@ -2,6 +2,7 @@
     <channel>
       <title>Oh See Media</title>
       <link>{{ "https://ohseemedia.com" | cdata }}</link>
+      <description>Oh See Media articles on Laravel, React, Vue, programming, and devops.</description>
       <lastBuildDate>{{ collection:posts limit="1" }}{{ date format="r" }}{{ /collection:posts }}</lastBuildDate>
       <language>en-us</language>
       <copyright>Copyright {{ current_date format='Y' }}</copyright>
