--- a/resources/views/layouts/layout.antlers.html
+++ b/resources/views/layouts/layout.antlers.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site_short_locale }}" class="font-sans text-dark">
   <head>
+    <link rel="preload" href="{{ mix src='/css/app.css' }}" as="style">
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,6 +27,6 @@
       {{ template_content }}
       {{ partial:partials/footer }}
     </div>
-    <script src="{{ mix src='/js/app.js' }}"></script>
+    <script async src="{{ mix src='/js/app.js' }}"></script>
   </body>
 </html>
