--- a/resources/views/layouts/layout.antlers.html
+++ b/resources/views/layouts/layout.antlers.html
@@ -21,7 +21,7 @@
     <title>{{ title }} | Oh See Media</title>
     <link href="{{ mix src='/css/app.css' }}" rel="stylesheet" />
   </head>
-  <body class="text-dark bg-light border-t-4 border-secondary">
+  <body class="text-base text-dark bg-light border-t-4 border-secondary">
     <div class="w-full max-w-3xl mx-auto px-2">
       {{ partial:partials/header }}
       {{ template_content }}
