--- a/resources/views/layouts/layout.antlers.html
+++ b/resources/views/layouts/layout.antlers.html
@@ -19,7 +19,9 @@
     {{ /asset }}
 
     <title>{{ title }} | Oh See Media</title>
-    <link href="{{ mix src='/css/app.css' }}" rel="stylesheet" />
+
+    <link rel="stylesheet" href="{{ mix src='/css/app.css' }}">
+    <link rel="icon" href="/favicon.png" type="image/png">
   </head>
   <body class="text-base text-dark bg-light border-t-4 border-secondary">
     <div class="w-full max-w-3xl mx-auto px-2">
