--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -1,9 +1,10 @@
 <h1>{{ title }}</h1>
 
 <div class="flex text-sm text-gray-700 mb-8 justify-between">
-  <p>
+  <p class="mb-0">
     <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
-    - Posted in {{ category }} <a href="{{ url }}">{{ title }}</a> {{ /category }}</p>
+    - Posted in {{ category }} <a href="{{ url }}">{{ title }}</a> {{ /category }}
+  </p>
 </div>
 
 {{ if video}}
