--- a/resources/views/templates/search.antlers.html
+++ b/resources/views/templates/search.antlers.html
@@ -1,7 +1,7 @@
 {{ search:results }}
   {{ if no_results }}
     <h2>No results.</h2>
-  {{ else }}
+  {{ elseif published }}
     {{ partial:partials/summary }}
   {{ /if }}
 {{ /search:results }}
