Add taxonomy view, link categories to the taxonomy view.

--- a/resources/views/errors/404.antlers.html
+++ b/resources/views/errors/404.antlers.html
@@ -1,1 +1,4 @@
-<p>404 Page not found.</p>
+<h1 class="mb-6">Page not found</h1>
+
+<p>Try searching for what you are looking for: </p>
+{{ partial:partials/search }}
