--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="{{ excerpt ?? "Oh See Media" }}" />
+    <meta name="description" content="{{ excerpt ?? "Web programming articles including tips, tricks, and tutorials on Laravel, PHP, React, Vue, MySQL and more." }}" />
     
     <meta property="og:site_name" content="Oh See Media">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ title ?? "Oh See Media" }}">
-    <meta property="og:description" content="{{ excerpt ?? "Oh See Media" }}">
+    <meta property="og:description" content="{{ excerpt ?? "Web programming articles including tips, tricks, and tutorials on Laravel, PHP, React, Vue, MySQL and more." }}">
     <meta property="og:url" content="{{ current_url }}">
     {{ asset url="/images/ohseemedia-logo.svg" }}
       <meta property="og:image" content="{{ url }}">
