Remove usage of safe_truncate.

--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -8,5 +8,5 @@
       - Posted in {{ category }} <a href="/category#{{ slug }}">{{ title }}</a> {{ /category }}
     </p>
   </div>
-  <div>{{ excerpt | safe_truncate:300:... }}</div>
+  <div>{{ excerpt }}</div>
 </article>
