Clean up spacing around summaries.

--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -1,4 +1,4 @@
-<article class="py-4 border-b border-gray-300">
+<article class="mb-4 pb-4 border-b border-gray-300">
   <h3 class="m-0">
     <a href="{{ url }}" class="text-secondary">{{ title }}</a>
   </h3>
