Remove laravel server analytics, add search via algolia.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,5 +3,6 @@
 
 @import 'highlight.js/styles/night-owl.css';
 @import './typography.css';
+@import './search.css';
 
 @import 'tailwindcss/utilities';
