--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -3,7 +3,7 @@
 <div class="flex text-sm text-gray-700 mb-8 justify-between">
   <p class="mb-0">
     <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
-    - Posted in {{ category }} <a href="{{ url }}">{{ title }}</a> {{ /category }}
+    - Posted in {{ category }} <a href="/category#{{ slug }}">{{ title }}</a> {{ /category }}
   </p>
 </div>
 
