--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -5,7 +5,7 @@
   <div class="text-sm text-gray-700">
     <p class="mb-2">
       <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
-      - Posted in {{ category }} <a href="/category#{{ slug }}">{{ title }}</a> {{ /category }}
+      - Posted in {{ category }} <a href="/categories#{{ slug }}">{{ title }}</a> {{ /category }}
     </p>
   </div>
   <div>{{ excerpt }}</div>
