Clean up some styles, remove algolia search. Add post for moving search drop down to alpine.js.

--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -24,6 +24,10 @@
     url("/fonts/Inter-Bold.woff?v=3.11") format("woff");
 }
 
+.content {
+  @apply text-lg;
+}
+
 a {
   @apply text-primary font-semibold;
   &:hover {
@@ -36,7 +40,7 @@ p {
 }
 
 code {
-  @apply bg-light text-secondary p-1;
+  @apply bg-light text-base text-secondary p-1;
 }
 
 blockquote {
