--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -36,7 +36,7 @@
     </script>
     <script async src="{{ mix src='/js/app.js' }}"></script>
 
-    {{ if env:APP_ENV === 'production' }}
+    {{ if environment === 'production' }}
       {{ partial:partials/analytics }}
     {{ /if }}
   </body>
