--- a/resources/views/partials/_nav.antlers.html
+++ b/resources/views/partials/_nav.antlers.html
@@ -1,10 +1,10 @@
-<div class="flex-1 mt-1 md:mt-0 md:text-right">
+<div class="flex-1 mt-1 md:mt-0 text-center md:text-left">
   <ul>
    {{ structure:navigation }}
-   <li class="inline-block ml-4">
+   <li class="inline-block m-0 mr-4">
     <a
      href="{{ url }}"
-     class="text-primary-lighten font-light lowercase tracking-tight hover:underline"
+     class="text-primary-lighten font-bold lowercase tracking-tight hover:underline"
     >
      {{ title }}
     </a>
