--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -14,9 +14,7 @@
     <meta property="og:title" content="{{ title ?? "Oh See Media" }}">
     <meta property="og:description" content="{{ excerpt ?? "Web programming articles including tips, tricks, and tutorials on Laravel, PHP, React, Vue, MySQL and more." }}">
     <meta property="og:url" content="{{ current_url }}">
-    {{ asset url="/images/ohseemedia-logo.svg" }}
-      <meta property="og:image" content="{{ url }}">
-    {{ /asset }}
+    <meta property="og:image" content="{{ url }}/images/ohseemedia-square.png">
 
     <title>{{ title }} | Oh See Media</title>
 
