Fix og:image path.

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="{{ title ?? "Oh See Media" }}">
     <meta property="og:description" content="{{ excerpt ?? "Web programming articles including tips, tricks, and tutorials on Laravel, PHP, React, Vue, MySQL and more." }}">
     <meta property="og:url" content="{{ current_url }}">
-    <meta property="og:image" content="{{ url }}/images/ohseemedia-square.png">
+    <meta property="og:image" content="{{ env:APP_URL }}/images/ohseemedia-square.png">
 
     <title>{{ title }} | Oh See Media</title>
 
