Install tailwind 1.2 canary version. Use local copy of Inter.

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site_short_locale }}" class="font-sans text-dark">
   <head>
+    <link rel="preload" href="{{ mix src='/css/fonts.css' }}" as="style">
     <link rel="preload" href="{{ mix src='/css/app.css' }}" as="style">
 
     <meta charset="utf-8" />
@@ -18,6 +19,7 @@
 
     <title>{{ title ?? 'Home' }} | Oh See Media</title>
 
+    <link rel="stylesheet" href="{{ mix src='/css/fonts.css' }}">
     <link rel="stylesheet" href="{{ mix src='/css/app.css' }}">
     <link rel="icon" href="/favicon.png" type="image/png">
   </head>
