Add Bangers font.

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site_short_locale }}" class="font-sans text-dark">
   <head>
-    <link rel="preload" href="{{ mix src='/css/fonts.css' }}" as="style">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Bangers&display=optional" as="style">
+    <link rel="preload" href="https://rsms.me/inter/inter.css" as="style">
     <link rel="preload" href="{{ mix src='/css/app.css' }}" as="style">
 
     <meta charset="utf-8" />
@@ -19,7 +20,8 @@
 
     <title>{{ title ?? 'Home' }} | Oh See Media</title>
 
-    <link rel="stylesheet" href="{{ mix src='/css/fonts.css' }}">
+    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ mix src='/css/app.css' }}">
     <link rel="icon" href="/favicon.png" type="image/png">
   </head>
