--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -31,6 +31,10 @@ ul li {
   @apply list-disc ml-8;
 }
 
+.heading {
+  @apply font-heading font-normal tracking-wider text-2xl;
+}
+
 h1 {
   @apply text-2xl font-bold;
 }
