--- a/resources/views/taxonomy.antlers.html
+++ b/resources/views/taxonomy.antlers.html
@@ -1,7 +1,7 @@
 {{ taxonomy:category }}
   {{ if !entries | is_empty }}
     <div>
-      <h2 class="h2 mb-4" id="{{ slug }}">{{ title }}</h2>
+      <h2 class="mb-4 heading" id="{{ slug }}">{{ title }}</h2>
 
       <div>
         {{ entries }}
