--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -1,4 +1,4 @@
-<h1>{{ title }}</h1>
+<h1 class="heading">{{ title }}</h1>
 
 <div class="flex text-sm text-gray-700 mb-8 justify-between">
   <p class="mb-0">
