Style updates for headings and code blocks.

--- a/resources/views/templates/category.antlers.html
+++ b/resources/views/templates/category.antlers.html
@@ -1,7 +1,7 @@
 {{ taxonomy:category }}
   {{ if !entries | is_empty }}
     <div>
-      <h2 class="mb-4 heading text-lg" id="{{ slug }}">{{ title }}</h2>
+      <h3 class="mb-4 text-primary" id="{{ slug }}">{{ title }}</h3>
 
       <div>
         {{ entries }}
