--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -36,21 +36,28 @@ ul li {
 }
 
 h1 {
-  @apply text-2xl font-bold;
+  @apply heading text-2xl;
 }
 h2 {
-  @apply text-xl font-bold mt-12 mb-5;
+  @apply heading text-xl text-secondary mt-12 mb-5;
 }
 h3 {
-  @apply text-lg font-bold mt-10 mb-4;
+  @apply heading text-lg text-secondary mt-10 mb-4;
 }
 h4 {
-  @apply text-base font-bold mt-8 mb-3;
+  @apply heading text-base text-secondary mt-8 mb-3;
 }
 
 @media (min-width: 768px) {
   blockquote {
     @apply ml-10;
+  }
+  .hljs {
+    @apply rounded-lg shadow-lg;
+    width: 120%;
+    margin-left: -10%;
+    padding-left: 10%;
+    padding-right: 10%;
   }
 }
 
