--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -19,6 +19,10 @@ code {
   font-size: 16px;
 }
 
+.hljs {
+  @apply rounded-lg shadow-lg max-w-full p-4;
+}
+
 blockquote {
   @apply p-4 my-6 mx-0 text-gray-800 bg-gray-200 border-l-4 border-secondary-lighten;
 
@@ -51,13 +55,6 @@ h4 {
 @media (min-width: 768px) {
   blockquote {
     @apply ml-10;
-  }
-  .hljs {
-    @apply rounded-lg shadow-lg;
-    width: 120%;
-    margin-left: -10%;
-    padding-left: 10%;
-    padding-right: 10%;
   }
 }
 
