--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -36,21 +36,21 @@ ul li {
 }
 
 .heading {
-  @apply font-heading font-normal tracking-wider text-2xl;
+  @apply font-heading font-normal tracking-wider;
   text-shadow: 0 2px 0 #FFF;
 }
 
 h1 {
-  @apply heading text-2xl;
+  @apply heading text-3xl leading-tight mb-2;
 }
 h2 {
-  @apply heading text-xl text-secondary mt-12 mb-5;
+  @apply heading text-2xl text-secondary mt-12 mb-5;
 }
 h3 {
-  @apply heading text-lg text-secondary mt-10 mb-4;
+  @apply heading text-xl text-secondary mt-10 mb-4;
 }
 h4 {
-  @apply heading text-base text-secondary mt-8 mb-3;
+  @apply heading text-lg text-secondary mt-8 mb-3;
 }
 
 @media (min-width: 768px) {
