--- a/resources/views/partials/_nav.antlers.html
+++ b/resources/views/partials/_nav.antlers.html
@@ -4,7 +4,7 @@
    <li class="inline-block m-0 mr-4">
     <a
      href="{{ url }}"
-     class="heading text-base text-primary-lighten lowercase hover:underline"
+     class="heading text-lg text-primary-lighten lowercase hover:underline"
     >
      {{ title }}
     </a>
