--- a/resources/views/partials/_nav.antlers.html
+++ b/resources/views/partials/_nav.antlers.html
@@ -1,7 +1,7 @@
 <div class="flex-1 mt-1 md:mt-0 text-center md:text-left">
   <ul>
    {{ structure:navigation }}
-   <li class="inline-block m-0 mr-4">
+   <li class="inline-block m-0 mx-4 md:ml-0 md:mr-3">
     <a
      href="{{ url }}"
      class="heading text-lg text-primary-lighten lowercase hover:underline"
