--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -18,12 +18,11 @@
 
     <title>{{ title ?? 'Home' }} | Oh See Media</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
-    <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="{{ mix src='/css/app.css' }}">
     <link rel="icon" href="/favicon.png" type="image/png">
   </head>
-  <body class="text-base text-dark bg-light border-t-4 border-secondary">
+  <body class="text-base text-dark bg-white border-t-4 border-secondary">
     <div class="w-full max-w-3xl mx-auto px-2">
       {{ partial:partials/header }}
       {{ template_content }}
