--- a/resources/views/partials/_footer.antlers.html
+++ b/resources/views/partials/_footer.antlers.html
@@ -1,4 +1,4 @@
-<footer class="flex justify-between text-gray-500 font-bold text-sm py-4 mt-10 w-full max-w-3xl mx-auto">
+<footer class="flex justify-between text-gray-500 font-semibold text-sm py-4 mt-10 w-full max-w-3xl mx-auto">
   <div>
     Oh See Media &copy; {{ now format="Y" }}
   </div>
