--- a/resources/views/partials/_nav.antlers.html
+++ b/resources/views/partials/_nav.antlers.html
@@ -4,7 +4,7 @@
    <li class="inline-block m-0 mx-4 md:ml-0 md:mr-3">
     <a
      href="{{ url }}"
-     class="heading text-lg text-primary-lighten lowercase hover:underline"
+     class="heading text-lg text-secondary lowercase hover:underline hover:text-primary-lighten"
     >
      {{ title }}
     </a>
