--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -1,6 +1,6 @@
 <article class="mb-6 pb-6 border-b border-gray-300">
   <h3 class="m-0">
-    <a href="{{ url }}" class="text-secondary heading">{{ title }}</a>
+    <a href="{{ url }}" class="heading text-dark">{{ title }}</a>
   </h3>
   <div class="text-sm text-gray-700">
     <p class="mb-2">
