--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -19,11 +19,15 @@
     {{ elseif type == "code" }}
       <pre><code class="{{ syntax }}">{{ code | noparse | entities }}</code></pre>
     {{ elseif type == "example" }}
-      <div class="p-4 pt-2 mb-4 border border-gray-300 bg-white rounded shadow-inner">
-        <h4 class="text-gray-400 m-0 mb-6">Example</h4>
+      <div class="p-4 pt-3 mb-4 border border-gray-300 bg-white rounded shadow-inner">
+        <h4 class="text-gray-400 m-0 mb-4">Example</h4>
         <div>
           {{ example_content }}
         </div>
+        {{ if show_example }}
+        <h4 class="text-gray-400 mt-6 my-4">Code</h4>
+          <pre><code>{{ example_content | entities }}</code></pre>
+        {{ /if }}
       </div>
     {{ /if }}
   {{ /content }}
