--- a/resources/views/templates/category.antlers.html
+++ b/resources/views/templates/category.antlers.html
@@ -1,7 +1,7 @@
 {{ taxonomy:category }}
   {{ if !entries | is_empty }}
     <div>
-      <h3 class="mb-4 font-normal text-gray-600" id="{{ slug }}">{{ title }}</h3>
+      <h3 class="mb-4 font-normal text-gray-600 lowercase" id="{{ slug }}">{{ title }}</h3>
 
       <div>
         {{ entries }}
