--- a/resources/views/redirect.antlers.html
+++ b/resources/views/redirect.antlers.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL='{{ redirect_url }}'" />
+<meta http-equiv="refresh" content="0;URL='{{ redirect_location }}'" />
