--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -15,6 +15,7 @@
     <meta property="og:description" content="{{ excerpt ?? "Web programming articles including tips, tricks, and tutorials on Laravel, PHP, React, Vue, MySQL and more." }}">
     <meta property="og:url" content="{{ current_url }}">
     <meta property="og:image" content="{{ env:APP_URL }}/images/ohseemedia-square.png">
+    <meta property="twitter:image" content="{{ env:APP_URL }}/images/ohseemedia-square.png">
 
     <title>{{ title ?? 'Home' }} | Oh See Media</title>
 
